Changelog
=========

2.2.1 (unreleased)
------------------

- Nothing changed yet.


2.2.0 (2018-09-21)
------------------

- Add option to synchronize Solr with catalog in maintenance view.
  [buchi]


2.1.2 (2018-05-15)
------------------

- Set Content-Type 'application/x-www-form-urlencoded' for requests to
  /update/extract endpoint to ensure compatibility with Solr 7.3.
  [lgraf]

- Maintenance view: Allow reindexing without dooming the transaction.
  [lgraf]


2.1.1 (2018-02-20)
------------------

- Make sure we do not pass invalid dates to Solr.
  [buchi]


2.1.0 (2018-02-20)
------------------

- Declare dependency on plone.namedfile[blobs].
  [lgraf]

- Add diff function to maintenance view to compare UIDs in portal catalog with
  UIDs in Solr.
  [buchi]

- Fix security filter: Properly quote roles/users with spaces.
  [buchi]

- Add option to reindex Solr from a catalog query.
  [buchi]


2.0.0 (2018-02-15)
------------------

- Complete rewrite. Not compatible with previous versions.
  [buchi]